# Samreay

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  Gemfile  Gemfile.lock.old2  Makefile  README.md  _config-dev.yml  _config.yml  astro.config.mjs  bower.json  carbon_config_square.json  config.toml  convert.py  convert_notebook.py  createAllThumbs.py  createThumb.bat  createThumbSquish.bat  crunch.py  font_ideas.txt  hugo.toml  index.html  index.xml  instructions.md  left-sidebar.html  no-sidebar.html  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  pyproject.toml  resize.py  right-sidebar.html  robots.txt  runLocal.bat  runLocal.sh  sitemap.xml  summary.md  summary_generator.py  (+3 more)
.cursor/: mcp.json
_data/: blog.yml  books.yml  careers.yml  courses.yml  github.yml  imgdata.json  other.yml  papers.yml  podcasts.yml  projects.yml  status.yml  talks.yml  topics.yml
_includes/: badge.html  blog_layout.html  card.html  card_cover.html  card_cover_wide.html  carousel.html  features-home.html  footer.html  head.html  header.html  image.html  index_footer.html  index_head.html  modal.html  modal2.html  modal_thanks.html  news.html  newsletter-blog.html  newsletter.html  pagination.html  pdf.html  poster.html  presentation.html  review_layout.html  scripts.html  share.html  video.html  youtube.html
_layouts/: default.html  post.html  review_post.html
_posts/: 2009-06-01-computer.md  2010-09-19-lightning.md  2010-09-23-planet.md  2011-06-01-bottle.md  2011-07-28-box.md  2012-06-01-satellite.md  2013-06-20-europe.md  2013-10-01-dj.md  2014-10-20-marz.md  2015-01-01-tasmania.md  2015-01-09-first-blog2.md  2015-08-20-kubo.md  2015-10-20-bao.md  2016-02-20-globular.md  2016-02-21-gemini.md  2016-07-08-california.md  2016-08-01-chainconsumer.md  2016-09-04-surveyvis.md  2016-09-09-getlit.md  2016-10-01-uluru.md  2016-10-27-additive.md  2016-11-17-lisa.md  2017-02-08-japan.md  2017-02-10-moon.md  2017-02-27-bismuth.md  2017-03-07-refractorium.md  2017-03-21-famelab.md  2017-03-25-scope.md  2017-04-18-knife.md  2017-05-15-pint.md  2017-06-22-chicago.md  2017-08-02-ozdes.md  2017-08-13-botb.md  2017-08-15-pub.md  2017-09-12-taipan.md  2017-09-13-map-canyon.md  2017-09-16-map-camp.md  2017-09-17-map-caves.md  2017-12-05-codeworkshop.md  2018-01-01-botb.md  (+11 more)
astro-public/: CNAME  robots.txt  site.webmanifest
blog/: blog.html  outreach.html  papers.html  podcast.html  projects.html  talks.html  trips.html  tutorials.html
blogs/: index.html  index.xml  rename.py
builder/: convert.py  hashes.json  summary_generator.py
categories/: index.html  index.xml
css/: main.min.5400481537df6ded7c631d7584eaeb522e0bea3c952908a01d5163e524dfbcde.css  main.min.5885372f23ef07b79bc16e6f2da719ab7aef8e679a9f36a46a5dfe568f4d60e7.css  main.min.6ec7f8f7d033c70283a3fe4d7f89cfc14cad1cef1ad5bcabdf07178bff0d7d9f.css  main.min.7fbf65bef988e0cecd6d148a59756085deed3c480729d260d0a30b282b1d7da8.css  main.min.b842bc4f8d358708f7b5666fe7108ed6474cd18dad036996cd6f85d3bb7b6a42.css  main.min.f97531dbcfa76c58822e21d7ec7cb2612e5bb7e7785e16d1aeeef3f61bbae184.css
data/: artists.yml  books.yml  categories.yml  courses.yml  other.yml  status.yml  test.yml
decorators/: index.html
docs/: DECISIONS.md  testing.md
encoding_colours/: index.html
filtering/: index.html
fuzzy/: index.html
pages/: blog.html  (+3 more)
(+2258 files in other folders)
