[tool.poetry]
name = "arenko-blog"
version = "0.1.0"
description = ""
authors = ["Samuel Hinton <sh@arenko.group>"]
readme = "README.md"
packages = [{include = "builder"}]

[tool.poetry.dependencies]
python = ">=3.9"
jupyter = "^1.0.0"
nbconvert = "^7.2.4"
jupyter-contrib-nbextensions = "^0.7.0"
rich = "^13.2.0"
python-frontmatter = "^1.0.0"
pyyaml = "^6.0.1"
notebook= "6.4.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"