[project]
name = "samreay-website"
version = "0.1.0"
description = ""
authors = [{ name = "Samuel Hinton", email = "samuelreay@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "jupyter>=1.0.0,<2",
    "nbconvert>=7.2.4,<8",
    "jupyter-contrib-nbextensions>=0.7.0,<0.8",
    "rich>=13.2.0,<14",
    "python-frontmatter>=1.0.0,<2",
    "pyyaml>=6.0.1,<7",
    "notebook==6.4.12",
]

[dependency-groups]
dev = [
    "pre-commit>=3.3.3",
    "ruff>=0.14.0, <1",
]


[tool.ruff]
src = ["src"]
select = ["ALL"]
ignore = [
    "PD010",
    "PD011",
    "PD901",
    "PLR2004",
    "UP017",
    "TRY003",
    "INP001",
    "PLR0912",
    "PLR0913",
    "TRY300",
    "E712",
    "PLW2901",
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q001",
    "Q000",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "D100",
    "D103",
    "G004",
    "ISC002",
    "S602",
    "S105",
    "EM102",
    "ANN204",
    "D101",
    "EXE003",
    "ERA001",
    "ANN202",
    "ANN201",
    "D102",
    "F402",
    "D107",
]
line-length = 120
target-version = "py311"

[tool.ruff.extend-per-file-ignores]
"test/***" = ["INP001"]
"__init__.py" = ["E402", "F401"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
